[project]
name = "janesthetic"
dynamic = ["version"]
description = "JAX-anesthetic"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax",
    "chex",
]

[build-system]
requires = ["setuptools_scm>=8"]

[tool.setuptools_scm]
version_file = "janesthetic/_version.py"

[tool.uv.sources]
midas = { git = "ssh://git@github.com/polychord/midas", branch = "master" }

[project.optional-dependencies]
dev = ["anesthetic", "midas", "pytest", "pytest-cov", "anesthetic"]

[tool.setuptools.packages.find]
include = ["janesthetic"]
